<resources>
    <string name="app_name">Mobilny przewodnik po miastach Polski</string>
    <string name="action_settings">Settings</string>
    <string name="action_accept">Zaakceptuj</string>

    <string name="no_location_provider">Włącz lokalizacje w telefonie!</string>

    <string name="main_menu_map">Mapy</string>
    <string name="main_menu_ciy_list">Lista miast</string>
    <string name="main_menu_travel_list">Lista wycieczek</string>
    <string name="main_menu_object_list">Lista obiektów</string>
    <string name="main_menu_user_data">Dane użytkownika</string>
    <string name="main_menu_logout">Wyloguj</string>

    <!-- login -->
    <string name="login_user_login">Login</string>
    <string name="login_user_password">Hasło</string>
    <string name="login_user_button_label">Zaloguj</string>
    <string name="login_empty_data_message">Podaj login i hasło</string>
    <string name="login_server_error_message">Błąd logowania. Sprawdź połącznie internetowe i wprowadź poprawne dane!</string>
    <string name="login_wrong_data_message">Błąd logowania. Wprowadź poprawne dane!</string>

    <!-- add city -->
    <string name="add_city_name_hint">Nazwa miasta</string>

    <!-- add object -->
    <string name="add_object_name_hint">Nazwa obiektu</string>
    <string name="add_object_city_name_hint">Nazwa miasta obiektu</string>
    <string name="add_object_location">Lokalizacja objektu</string>
    <string name="add_object_type_hint">Typ obiektu</string>
    <string name="add_object_map_dialog_title">Wybierz pozycję na mapie</string>

    <!-- marker type -->
    <string name="marker_type_antique">Zabytek</string>
    <string name="marker_type_museum">Muzeum</string>
    <string name="marker_type_monument">Pomnik</string>
    <string name="marker_type_gallery">Galeria</string>
    <string name="marker_type_restaurant">Restauracja</string>
    <string name="marker_type_tourist_attraction">Atrakcja turystyczna</string>
    <string name="marker_type_cash_machine">Bankomat</string>
    <string name="marker_type_hotel">Hotel</string>
    <string name="marker_type_fast_food">Fast Food</string>
    <string name="marker_type_tourist_information">Informacja turystyczna</string>
    <string name="marker_type_unknown">Nieznany</string>

    <!-- User data -->
    <string name="user_data_can_not_display_user_daata">Nie można wyświtelić danych użytkownika.</string>
    <string name="user_data_login_hint">Login</string>
    <string name="user_data_first_name_hint">Imię</string>
    <string name="user_data_last_name_hint">Nazwisko</string>
    <string name="user_data_email_hint">Email</string>
    <string name="user_data_password_hint">Hasło</string>
    <string name="user_data_confirm_password_hint">Potwiedź hasło</string>
    <string name="user_data_update_button_label">Aktualizuj dane</string>
    <string name="user_data_password_are_different">Podane hasła są różne - usuń je albo poraw tak żeby były spójne.</string>
    <string name="user_data_update_success">Dane użytkownika zostały zaktualizowne.</string>
    <string name="user_data_update_failed">Błąd podaczas aktualizowania danych.</string>
</resources>
