<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/user_data_image"
                android:src="@drawable/ic_photo_placeholder"/>
        <EditText
                android:id="@+id/user_data_login"
                android:layout_marginTop="20dp"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_data_login_hint"/>
        <EditText
                android:id="@+id/user_data_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_data_first_name_hint">
            <requestFocus/>
        </EditText>

        <EditText
                android:id="@+id/user_data_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_data_last_name_hint"/>
        <EditText
                android:id="@+id/user_data_email"
                android:enabled="false"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_data_email_hint"/>
        <EditText
                android:id="@+id/user_data_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/user_data_password_hint"/>
        <EditText
                android:id="@+id/user_data_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/user_data_confirm_password_hint"/>
        <Space
                android:layout_width="match_parent"
                android:minHeight="20dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_data_update_button_label"
                android:id="@+id/user_data_button"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>