<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:src="@drawable/splash_icon"
                android:layout_gravity="center_horizontal"/>
        <android.support.design.widget.TextInputLayout
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_user_login"
                    android:id="@+id/login_login"
                    android:layout_gravity="center_horizontal"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/login_user_password"
                    android:id="@+id/login_password"
                    android:layout_gravity="center_horizontal"/>
        </android.support.design.widget.TextInputLayout>
        <Space
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:minHeight="30dp"
                android:layout_gravity="center_horizontal"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_user_button_label"
                android:id="@+id/login_button"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>